--- a/c_sharp_calculator/Calculator/Pages/Display.razor
+++ b/c_sharp_calculator/Calculator/Pages/Display.razor
@@ -3,33 +3,32 @@
         @GetDisplayedCalculation()
     </div>
     <div id="result" class="card-body calculation-card-text">
-        @result
+        @Result
     </div>
 </div>
 
 @code {
     [Parameter]
-    public List<string> currentCalculation { get; set; }
+    public List<string> Calculation { get; set; }
 
     [Parameter]
-    public string result { get; set; }
+    public string Result { get; set; }
 
     private List<string> operators = new List<string> { "+", "-", "x", "÷", "=" };
 
     private string GetDisplayedCalculation()
     {
-        System.Console.WriteLine("calc: " + string.Join("", currentCalculation));
-        if (IsADecimal(currentCalculation))
+        if (IsADecimal(Calculation))
         {
             return "";
         }
 
-        if (currentCalculation.Contains("."))
+        if (Calculation.Contains("."))
         {
-            RemoveTrailingDecimal(currentCalculation);
+            RemoveTrailingDecimal(Calculation);
         }
 
-        return AddSpacing(currentCalculation);
+        return AddSpacing(Calculation);
     }
 
     private void RemoveTrailingDecimal(List<string> calculation)
