--- a/c_sharp_calculator/Calculator/Pages/Keypad.razor
+++ b/c_sharp_calculator/Calculator/Pages/Keypad.razor
@@ -22,7 +22,7 @@
 @code {
     List<List<Button>> buttons = new List<List<Button>>()
     {
-    new List<Button>() { new Button(CalculatorAction.Divide)},
+    new List<Button>() { new Button("C"), new Button("CE"), new Button("<-"), new Button(CalculatorAction.Divide)},
     new List<Button>() { new Button(7),new Button(8), new Button(9), new Button(CalculatorAction.Multiply) },
     new List<Button>() { new Button(4), new Button(5), new Button(6), new Button(CalculatorAction.Subtract) },
     new List<Button>() { new Button(1), new Button(2), new Button(3), new Button(CalculatorAction.Add) },
